# CodotakuSDL

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  compile_shaders.bat
examples/: triangle.cpp  triangle.frag.spv  triangle.vert.dxil  triangle.vert.spv  triangle_frag.dxil  triangle_vert.spv
include/codotaku/: buffer.h  camera2d.h  data_blob.h  geometry.h  graphics_pipeline.h  input.h  polygon.h  render_pass.h  runtime.h  runtime_info.h  shader.h  staging_belt.h
shaders/: triangle.hlsl
src/: graphics_pipeline.cpp  runtime.cpp  shader.cpp  staging_belt.cpp
